// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JCard create create 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard create dblclick event 1`] = `
VueWrapper {
  "_emitted": Object {
    "textDbClick": Array [
      Array [
        MouseEvent {
          "isTrusted": false,
        },
      ],
    ],
  },
  "_emittedByOrder": Array [
    Object {
      "args": Array [
        MouseEvent {
          "isTrusted": false,
        },
      ],
      "name": "textDbClick",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard create mousedown event 1`] = `
VueWrapper {
  "_emitted": Object {
    "mousedown": Array [
      Array [
        MouseEvent {
          "isTrusted": false,
        },
      ],
    ],
  },
  "_emittedByOrder": Array [
    Object {
      "args": Array [
        MouseEvent {
          "isTrusted": false,
        },
      ],
      "name": "mousedown",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard create mouseup event 1`] = `
VueWrapper {
  "_emitted": Object {
    "mouseup": Array [
      Array [
        MouseEvent {
          "isTrusted": false,
        },
      ],
    ],
  },
  "_emittedByOrder": Array [
    Object {
      "args": Array [
        MouseEvent {
          "isTrusted": false,
        },
      ],
      "name": "mouseup",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard direction horizontal direction is horizontal and role is doctor 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard direction horizontal direction is horizontal and role is patient 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard direction vertical direction is vertical and role is doctor 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard direction vertical direction is vertical and role is patient 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard role doctor role is doctor and direction is horizontal 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard role doctor role is doctor and direction is vertical 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard role patient role is patient and direction is horizontal 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard role patient role is patient and direction is vertical 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard size large size 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard size small size 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard slot append pass append 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard slot avatar no pass avatar no pass avatar and role is doctor 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard slot avatar no pass avatar no pass avatar and role is patient 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard slot avatar pass avatar pass avatar and role is doctor 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard slot avatar pass avatar pass avatar and role is patient 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard slot prefix pass prefix 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard text test is html 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JCard text test is text 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;
